# inventree-stock-syncer

./: .gitignore  README.md  pyproject.toml
inventree_magento/: __init__.py  magento_client.py  plugin.py
inventree_magento_sync/: __init__.py  plugin.py
tests/: __init__.py  test_magento_client.py
