[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-magento"
version = "0.1.0"
description = "InvenTree plugin to sync stock quantities with Magento 2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Matt Styles"}
]
keywords = ["inventree", "magento", "stock", "sync", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.entry-points."inventree_plugins"]
MagentoStockSyncPlugin = "inventree_magento.plugin:MagentoStockSyncPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["inventree_magento*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "SIM"]


